Add controller unit tests (#48)
* Add controller unit tests